# habits_ms

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
database/: .env.example  Dockerfile  Makefile  create_users.sh  docker-compose.yml
database/master/: Dockerfile  Makefile  configure.sh  create-reader-user.sql  create-users.sh  replace-credentials.sh
database/slave/: Makefile
docs/: Habitus.Swagger.yaml  Habitus.postman_collection.json  postmanCollection.json  relational_model.mwb
migrations/2023-09-01-150021_create_categories/: up.sql
migrations/2023-09-01-154845_create_habits/: down.sql  up.sql
migrations/2023-09-01-155347_create_habits_recurrences/: down.sql  up.sql
migrations/2023-09-01-155723_create_habits_data_collected/: down.sql  up.sql
migrations/2023-10-15-151925_habits_cascade_deletion/: down.sql  up.sql
migrations/2023-11-04-042546_add_location_column/: down.sql  up.sql
migrations/2023-11-29-000649_add_categories/: down.sql  up.sql
src/: db.rs  error.rs  main.rs  models.rs  routes.rs  schema.rs  seeders.rs  tests.rs  validators.rs
src/[INDEV] routes/: mod.rs
src/[INDEV] routes/v1/: habits.rs  mod.rs
src/controllers/: category_handler.rs  habit_data_handler.rs  habit_handler.rs  habits.rs  habits_handler.rs  mod.rs  recurrency_handler.rs  utils.rs
src/graphql/: enqueue_habit_update.graphql  enqueue_notification.graphql  schema.graphql
src/handlers/: category_handler.rs  events_handler.rs  habit_data_handler.rs  habit_handler.rs  mod.rs  ownership_handler.rs  recurrence_handler.rs  recurrency_handler.rs
src/jobs/: mod.rs
src/models/: api.rs  database.rs
src/models/api/: category_api_models.rs  data_api_models.rs  events_api_models.rs  habit_api_models.rs  mod.rs  recurrence_api_models.rs  recurrency_api_models.rs
src/queries/: categories_queries.rs  data_queries.rs  events_queries.rs  habits_queries.rs  mod.rs  recurrences_queries.rs
src/routes/: mod.rs
src/routes/v1/: category_route.rs  events_route.rs  habit_data_route.rs  habits_route.rs  mod.rs  ownership_route.rs  recurrence_route.rs  recurrency_route.rs
src/services/: habit_update_trigger_service.rs  mod.rs  reminders_service.rs
src/utils/: mod.rs  queries.rs  time.rs
