[package]
name = "habitus_activities"
version = "0.2.0"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
tokio = { version = "1.2", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono", "r2d2", "numeric"] }
dotenvy = "0.15.0"
bigdecimal = { version = "0.4.1", features = ["serde"] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
lazy_static = "1.4.0"